Template pages and theme organization.

--- a/sample_site/drafts/2.md
+++ b/sample_site/drafts/2.md
@@ -1,6 +1,6 @@
 title: Hiding vs. Disabling
 timestamp: 2007-01-22
-status: d
+status: published
 ---
 
 Someone came by my office today and asked me if I could show him how to make a
