More themes changes, updates to dark_rainbow theme.

--- a/sample_site/drafts/3.md
+++ b/sample_site/drafts/3.md
@@ -1,7 +1,7 @@
 ---
 title: A Day in the Life
 timestamp: 2005-06-05
-ignore:
+status: published
 ---
 
 _**Note:**_ The thoughts I have here are **my own perceptions** of the
