--- a/sample_site/drafts/4.md
+++ b/sample_site/drafts/4.md
@@ -1,6 +1,7 @@
 ---
 title: The Zune and Wireless
 timestamp: 2006-12-19
+status: published
 ---
 
 A lot of people have made a big deal about the limitations of the
