Minification of CSS and JS as well as better support for LESS preprocessing.
Also bundled dotless as an included lib for LESS preprocessing on Windows.

--- a/sample_site/posts/(p)2012-03-10-welcome.md
+++ b/sample_site/posts/(p)2012-03-10-welcome.md
@@ -1,5 +1,5 @@
 title: Welcome
-timestamp: 09:56 AM Saturday, March 10, 2012
+timestamp: 09:56 AM Saturday, March 10, 2012 PST
 status: published
 slug: welcome
 
