--- a/sample_site/posts/(p)2011-11-03-post-from-2011.md
+++ b/sample_site/posts/(p)2011-11-03-post-from-2011.md
@@ -1,5 +1,5 @@
 title: Post from 2011
-timestamp: 12:00 AM Thursday, November 03, 2011
+timestamp: 12:00 AM Thursday, November 03, 2011 PDT
 status: published
 slug: post-from-2011
 
