Updated sample site to disable PREPROCESS_LESS by default. This was causing problems for some people who don't have lessc installed or aren't on Windows. Defaulting this to off for the sample site seems reasonable. Users who want preprocessing can enable it for their sites. This changes only the default for the sample site. The engineer default (true) hasn't changed.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+version 0.2.2 - April 30, 2012
+
+- Updated sample site to disable :attr:`~engineer.conf.EngineerConfiguration.PREPROCESS_LESS` by default. This way
+  the site will still build even if you don't have lessc installed or aren't on Windows.
+
+
 version 0.2.1 - April 28, 2012
 
 - Fixed corrupted LESS files that made it into v0.2.0.
