--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,26 +1,2 @@
-version 0.2.2 - April 30, 2012
-
-- Updated sample site to disable :attr:`~engineer.conf.EngineerConfiguration.PREPROCESS_LESS` by default. This way
-  the site will still build even if you don't have lessc installed or aren't on Windows.
-
-
-version 0.2.1 - April 28, 2012
-
-- Fixed corrupted LESS files that made it into v0.2.0.
-- Fixed bug that prevented attribution text and links from showing up in Dark Rainbow theme.
-
-
-version 0.2.0 - April 22, 2012
-
-- Better post timezone handling.
-- Various fixes to Dark Rainbow theme.
-- Various fixes to the post cache mechanisms.
-- Preprocessing support for LESS.
-- Minification support for JS and CSS static files.
-- New commands - 'clean' and 'init'.
-- Major documentation improvements. (In other words, there is now documentation.)
-
-
-version 0.1.0 - March 13, 2012
-
-- Initial release.
+See engineer/docs_source/changelog.rst in the source or
+http://engineer.readthedocs.org/en/latest/changelog.html
